Fix bug with spacing between the buttons in top menu

--- a/css/style.css
+++ b/css/style.css
@@ -490,6 +490,7 @@ body {
 }
 
 .top-menu .menu-btn {
+  margin-right: -4px;
   display: inline-block;
   height: 60px;
   background-color: #ffffff;
