--- a/sass/sections/_topMenu.scss
+++ b/sass/sections/_topMenu.scss
@@ -9,6 +9,7 @@
   position: fixed;
 
   .menu-btn {
+    margin-right: -4px;
     display: inline-block;
     height: 60px;
     background-color: #ffffff;
